# warsha

./: CLAUDE.md  PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
docs/: system.md
scripts/: latest-json.mjs
src/: App.tsx  actions.test.ts  actions.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  commands.rs  headless.rs  images.rs  lib.rs  main.rs  monitor.rs  pty.rs  session.rs  shells.rs  update.rs
src/features/: icons.tsx
src/features/chat/: ChatPane.tsx  imageDrop.ts  parser.test.ts  parser.ts  send.ts
src/features/command-palette/: CommandPalette.tsx
src/features/new-session/: NewSessionDialog.tsx
src/features/planner/: EdgeInspector.tsx  Inspector.tsx  Palette.tsx  PlanCanvas.tsx  PlannerView.tsx  ReviewPanel.tsx  RunPreview.tsx  SendToAiModal.tsx  SendToClaudeModal.tsx  blueprintSpec.ts  graph.test.ts  graph.ts  improve.test.ts  improve.ts  layout.test.ts  layout.ts  mirrorScope.test.ts  mirrorScope.ts  nodeKinds.ts  prompt.test.ts  prompt.ts  review.test.ts  review.ts  sendToAi.ts  sendToClaude.ts  serializeMarkdown.test.ts  serializeMarkdown.ts  simulate.test.ts  simulate.ts
src/features/radar/: RadarDialog.tsx
src/features/settings/: SettingsDialog.tsx  ShortcutsSection.tsx
src/features/shortcuts/: ShortcutsDialog.tsx  registry.test.ts  registry.ts
src/lib/: dialog-trap.tsx  i18n.ts  id.ts  ipc.ts  sessionTypes.test.ts  sessionTypes.ts  theme.test.ts  theme.ts  tints.test.ts  tints.ts  types.ts  updater.ts
src/store/: chat.ts  layout.test.ts  layout.ts  persistence.test.ts  persistence.ts  plans.test.ts  plans.ts  radar.test.ts  radar.ts  runtime.ts  settings.test.ts  settings.ts  templates.test.ts  templates.ts  tree.test.ts  tree.ts  ui.ts  workspaces.test.ts  workspaces.ts
src/styles/: app.css  global.css  planner.css
(+18 files in other folders)
